tests/snapshots/e2e__e2e_nested_object_json__json__n100.snap
---
source: tests/e2e.rs
expression: stdout
---
{
  "a": {
    "b": [
      "x"
    ],
    "c": 1
  },
  "d": [
    {
      "k": "v"
    }
  ]
}
